Fixed makefile and maven